--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Course Connections</title>
+    <p>-by MRZ</p>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
