--- a/index.html
+++ b/index.html
@@ -191,5 +191,7 @@
             })
             .catch(error => console.error('Error fetching JSON:', error));
     </script>
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <div class="elfsight-app-aa4f2467-0ba7-4c9a-a871-87ed2c499711" data-elfsight-app-lazy></div>
 </body>
 </html>
